--- a/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4.vbproj
+++ b/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4.vbproj
@@ -95,6 +95,18 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Database.vb" />
+    <Compile Include="Customer-ProfilToko.Designer.vb">
+      <DependentUpon>Customer-ProfilToko.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Customer-ProfilToko.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Staf-ProfilToko.Designer.vb">
+      <DependentUpon>Staf-ProfilToko.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Staf-ProfilToko.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Home.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +195,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin-ManajemenToko.resx">
       <DependentUpon>Admin-ManajemenToko.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customer-ProfilToko.resx">
+      <DependentUpon>Customer-ProfilToko.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Staf-ProfilToko.resx">
+      <DependentUpon>Staf-ProfilToko.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.vb</DependentUpon>
