--- a/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4.vbproj
+++ b/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4/ProjectAkhir_Kelompok4.vbproj
@@ -375,5 +375,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-customer-100.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Bahan\bgPageCust.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
